[package]
name = "benchmarks"
version = "0.2.0"
edition = "2021"
default-run = "main"

[dependencies]
rand = "0.9.0"
random = "0.14.0"
dsi-bitstream = { path="../" }
rand_distr = "0.5.0"
once_cell = "1.19.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.141"

[features]
default = ["reads", "u32"]
reads = []
u16 = []
u32 = []
u64 = []
delta_gamma = []
univ = [] # Test using a Zipf distribution of exponent one instead of using implied distributions

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "implied"
path = "src/implied.rs"

[profile.release]
opt-level = 3             # like --release
lto = "fat"               # Full LTO
overflow-checks = false   # Disable integer overflow checks.
debug = false             # Include debug info.
debug-assertions = false  # Enables debug assertions.
codegen-units=1           # slower compile times, but maybe better perf
