[package]
name = "benchmarks"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
rand = "0.10.0"
rand_distr = "0.6.0"
dsi-bitstream = { path="../", features = ["implied"] }

[dev-dependencies]
criterion = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2.141"

[features]
default = ["reads", "u32"]
reads = []
u16 = []
u32 = []
u64 = []
delta_gamma = []
univ = [] # Test using a Zipf distribution of exponent one instead of using implied distributions

[[bench]]
name = "tables"
harness = false

[[bench]]
name = "comparative"
harness = false

[profile.release]
opt-level = 3             # like --release
lto = "thin"               # Full LTO
overflow-checks = false   # Disable integer overflow checks.
debug = false             # Include debug info.
debug-assertions = false  # Enables debug assertions.
codegen-units=1           # slower compile times, but maybe better perf
