[package]
name = "dsi-bistream-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.dsi-bitstream]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[features]
default = ["bits", "minimal_binary", "unary", "gamma", "delta", "zeta"]
bits = []
minimal_binary = []
unary = []
gamma = []
delta = []
zeta = []

[profile.release]
debug = 1

[[bin]]
name = "mem_word_read"
path = "fuzz_targets/mem_word_read.rs"
test = false
doc = false

[[bin]]
name = "mem_word_write"
path = "fuzz_targets/mem_word_write.rs"
test = false
doc = false

[[bin]]
name = "codes"
path = "fuzz_targets/codes.rs"
test = false
doc = false

[[bin]]
name = "mem_word_write_vec"
path = "fuzz_targets/mem_word_write_vec.rs"
test = false
doc = false
