[package]
name = "dsi-bistream-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "*"
#libfuzzer-sys = { version = "*", package = "libafl_libfuzzer", features = ["introspection"], git = "https://github.com/AFLplusplus/LibAFL"}
arbitrary = { version = "1", features = ["derive"] }

[dependencies.dsi-bitstream]
path = ".."
features = ["fuzz"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "mem_word_reader"
path = "fuzz_targets/mem_word_reader.rs"
test = false
doc = false

[[bin]]
name = "mem_word_reader_strict"
path = "fuzz_targets/mem_word_reader_strict.rs"
test = false
doc = false

[[bin]]
name = "mem_word_writer"
path = "fuzz_targets/mem_word_writer.rs"
test = false
doc = false

[[bin]]
name = "codes"
path = "fuzz_targets/codes.rs"
test = false
doc = false

[[bin]]
name = "mem_word_writer_vec"
path = "fuzz_targets/mem_word_writer_vec.rs"
test = false
doc = false
